quiz now has clickablity